@@ -13,7 +13,7 @@ repositories {
 
 dependencies {
     // Spring Boot Framework
-    implementation 'org.springframework.boot:spring-boot-starter'
+//    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     // Database
@@ -42,6 +42,7 @@ dependencies {
 }
 
 
-test {
+tasks.named('test')  {
     useJUnitPlatform()
+    jvmArgs '-XX:+EnableDynamicAgentLoading', '-Xshare:off', '-Dnet.bytebuddy.experimental=true'
 }
